--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Morteza Pourreza"
+title                    : "iMorteza - Morteza Pourreza"
 title_separator          : "-"
 name                     : &name "Morteza Pourreza"
 description              : &description "personal description"
